--- a/res/db.properties
+++ b/res/db.properties
@@ -1,3 +1,3 @@
-db.jdbc.url=jdbc:mysql://localhost/mysql?useSSL=true
+db.jdbc.url=jdbc:mysql://localhost/railway?useSSL=true
 db.jdbc.username=root
 db.jdbc.password=
